# marvin

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api_reference/components/ai_application/: index.html
api_reference/components/ai_classifier/: index.html
api_reference/components/ai_function/: index.html
api_reference/components/ai_model/: index.html
api_reference/engine/language_models/anthropic/: index.html
api_reference/engine/language_models/base/: index.html
api_reference/prompts/base/: index.html
api_reference/settings/: index.html
api_reference/utilities/async_utils/: index.html
api_reference/utilities/collections/: index.html
api_reference/utilities/embeddings/: index.html
api_reference/utilities/history/: index.html
api_reference/utilities/logging/: index.html
api_reference/utilities/messages/: index.html
api_reference/utilities/strings/: index.html
api_reference/utilities/types/: index.html
community/: index.html
community/development_guide/: index.html
community/feedback/: index.html
components/ai_application/: index.html
components/ai_classifier/: index.html
components/ai_function/: index.html
components/ai_model/: index.html
components/overview/: index.html
configuration/providers/: index.html
configuration/settings/: index.html
cookbook/flows/: refresh_vectorstore.py
deployment/: index.html
docs/welcome/: what_is_marvin.md
examples/classification_api/: index.html
examples/deduplication/: index.html
examples/extraction_api/: index.html
examples/github_digest/: index.html
examples/slackbot/: index.html
llms/llms/: index.html
llms/prompt/: index.html
prompting/prompt_function/: index.html
sandbox/: pyproject.toml
search/: search_index.json
src/marvin/: pydantic.py  settings.py
src/marvin/agents/: base.py
src/marvin/components/: ai_classifier.py  ai_component.py  ai_function.py  ai_model.py
src/marvin/deployment/: __init__.py
src/marvin/framework/: main.py
src/marvin/functions/: __init__.py
src/marvin/llms/: base.py  openai.py
src/marvin/loaders/: discourse.py  github.py  web.py
src/marvin/prompts/: base.py
src/marvin/tools/: chroma.py
src/marvin/types/: __init__.py  openai_temp.py
src/marvin/utilities/: async_utils.py  collections.py  embeddings.py  exceptions.py  nlp.py  strings.py
src/marvin/vectorstores/: chroma.py
tests/: conftest.py
tests/test_primitives/: test_ai_fn.py  test_ai_model.py
tests/test_utilities/: __init__.py  test_documents.py
utilities/chat_completion/: index.html
welcome/installation/: index.html
welcome/overview/: index.html
welcome/quickstart/: index.html
welcome/what_is_marvin/: index.html
(+19 files in other folders)
