# package metadata
[project]
name = "marvin"
dynamic = ["version"]
description = "A batteries-included library for building AI-powered software."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "chatbot", "llm"]
requires-python = ">=3.8"

[project.urls]
Code = "https://github.com/prefecthq/marvin"
Documentation = "https://www.askmarvin.ai"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# pytest configuration
[tool.pytest.ini_options]
markers = ["llm: indicates that a test calls an LLM (may be slow)."]

testpaths = ["tests"]

norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

asyncio_mode = 'auto'

filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
env = [
    "MARVIN_TEST_MODE=1",
    "D:MARVIN_DATABASE_CONNECTION_URL=sqlite+aiosqlite:////tmp/marvin/marvin-tests.sqlite",
    "MARVIN_LOG_CONSOLE_WIDTH=120",
    # use 3.5 for tests by default
    'MARVIN_LLM_MODEL=gpt-3.5-turbo-0613',
]

# black configuration
[tool.black]
preview = true

# ruff configuration
[tool.ruff]
extend-select = ["I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']

# poetry configuration
[tool.poetry]
name = "marvin"
version = "0.1.0"
description = ""
authors = ["Adam Azzam <33043305+AAAZZAM@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.98.0"
typer = "^0.9.0"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"
datamodel-code-generator = {version = "^0.20.0", optional = true}
pydantic = "^1.10.9"
openapi-schema-pydantic = "^1.2.4"

[tool.poetry.extras]
generator = ["datamodel-code-generator"]

[tool.poetry.scripts]
marvin = "marvin.setup:app"

[tool.poetry.dev-dependencies]
ruff = "^0.0.274"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[tool.poetry.group.framework.dependencies]
prefect = "^2.10.17"
sqlalchemy = "^2.0.17"
bcrypt = "^4.0.1"
alembic = "^1.11.1"
aiosqlite = "^0.19.0"
gunicorn = "^20.1.0"

[tool.poetry.group.openai.dependencies]
openai = "^0.27.8"
tiktoken = "^0.4.0"

[tool.poetry.group.lancedb.dependencies]
lancedb = "^0.1.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"

packages = [
    { include = "marvin", from = "." },
    { include = "marvin.*", from = "." },
]
